# first_car_sim

./: README.md
car_description/: package.xml  setup.py
car_description/config/: ackermann_control.yaml  car_params.yaml
car_description/launch/: rviz_launch.launch.py
car_description/meshes/: chassis.stl  steering_hinge.stl  wheel.stl
car_description/rviz/: racecar.rviz
car_description/urdf/: base_link.xacro  macros.xacro  material.xacro
